@@ -1,8 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-noinst_HEADERS = fuse.h
-
-all-local: fuse.h
-
-fuse.h:
-	ln -s ../../kernel/linux/fuse.h .
